--- a/product-details.css
+++ b/product-details.css
@@ -694,7 +694,7 @@ body {
 }
 
 .nav-link{
-    color: var(--primary);
+    color: var(--secondary);
     text-decoration: none;
     font-weight: 600;
     transition: all 0.3s ease;
