--- a/style.css
+++ b/style.css
@@ -531,8 +531,8 @@ section {
 
 /* Statistics Section */
 .stats-section {
-    background: linear-gradient(135deg, var(--primary), var(--primary-dark));
-    color: var(--white);
+    background: white;
+    color: black;
     padding: 10px 0;
     text-align: center;
     position: relative;
@@ -546,7 +546,7 @@ section {
     left: 0;
     width: 100%;
     height: 10px;
-    background: linear-gradient(90deg, var(--primary), var(--secondary));
+    background: white;
 }
 
 .stats-container {
@@ -555,7 +555,7 @@ section {
     gap: 40px;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0 20px 50px 20px;
 }
 
 /* Terms Float Button */
@@ -685,7 +685,7 @@ section {
 .scrolling-announcement-container {
     width: 100%;
     overflow: hidden;
-    background: linear-gradient(135deg, var(--primary), var(--primary-dark));
+    background:  var(--secondary);
     color: white;
     padding: 12px 0;
     margin-bottom: 0px;
