--- a/style.css
+++ b/style.css
@@ -83,9 +83,52 @@ section {
     justify-content: center;
     text-align: center;
     color: var(--white);
-    background: url('images/background.jpg') no-repeat center center/cover;
-    background-attachment: fixed;
+    overflow: hidden;
 }
+
+
+.hero-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0;
+    z-index: 0;
+}
+
+
+
+
+.hero-bg::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 1;
+}
+
+.hero-bg-1 {
+    background-image: url('images/background1.jpg');
+    opacity: 1;
+}
+
+.hero-bg-2 {
+    background-image: url('images/background2.jpg');
+}
+
+.hero-bg-3 {
+    background-image: url('images/background3.jpg');
+}
+
+
+
 
 .hero::before {
     content: '';
