--- a/style.css
+++ b/style.css
@@ -99,42 +99,48 @@ canvas {
 }
 
 
-.hero-bg {
+.hero-video {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    opacity: 0;
+    object-fit: cover;
     z-index: 0;
 }
 
-
-.hero-bg::before {
+.hero-video::before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
 
-.hero-bg-1 {
-    background-image: url('images/background1.jpg');
-    opacity: 1;
+.hero-fallback {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
 }
 
-.hero-bg-2 {
-    background-image: url('images/background2.jpg');
-}
 
-.hero-bg-3 {
-    background-image: url('images/background3.jpg');
+/* Keep the overlay that darkens the video */
+.hero::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 2;
 }
 
 
