--- a/product-details.css
+++ b/product-details.css
@@ -700,6 +700,13 @@ body {
     transition: all 0.3s ease;
     
 }
+.trust-message-main{
+    color: #000;
+    font-size: 0.8rem;
+    text-decoration: underline;
+    font-weight: 200;
+    
+}
 
 .terms-body li:before {
     content: "•";
